# cars

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
cars/: asgi.py  settings.py  urls.py  wsgi.py
carsapp/: admin.py  apps.py  forms.py  models.py  permissions.py  sirealizers.py  urls.py  views.py
carsapp/migrations/: 0001_initial.py
carsapp/static/css/: styles.css
carsapp/static/js/: autocompletion.js  cars.js
carsapp/templates/carsapp/: base.html  car_confirm_delete.html  car_detail.html  car_form.html  car_list.html  car_update_form.html  index.html  login.html  logout.html  register.html
carsapp/templatetags/: math.py
